--- a/components/02-molecules/quick-links/_yds-quick-links.scss
+++ b/components/02-molecules/quick-links/_yds-quick-links.scss
@@ -229,4 +229,15 @@ $component-quick-links-themes: map.deep-get(tokens.$tokens, 'component-themes');
       object-fit: cover;
     }
   }
+
+  &[data-quick-links-position='first'],
+  &[data-quick-links-position='last'],
+  &[data-quick-links-position='first-and-last'] {
+    margin-top: var(--size-spacing-0);
+    margin-bottom: var(--size-spacing-0);
+  }
 }
+
+
+
+
